--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- ===== HEADER ===== -->
     <header>
         <h1>Priyesh Sharma</h1>
-        <p>Student | Beginner Web Developer</p>
+        <p>Student | Aspiring Web Developer</p>
     </header>
     <!-- ===== INTRO SECTION ===== -->
     <section id="intro" class="box intro">
@@ -73,7 +73,7 @@
     <!-- ===== CONTACT SECTION ===== -->
     <section id="contact" class="box">
         <h2>Contact Me</h2>
-        <p>Email: priyesh5458y@example.com</p>
+        <p>Email: priyesh5458y@gmail.com</p>
         <p>Phone: +91-6265577846</p>
     </section>
 <!-- ===== SOCIAL MEDIA SECTION ===== -->
@@ -85,9 +85,9 @@
         <a href="https://www.linkedin.com/in/priyesh-sharma-334659388?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social linkedin">LinkedIn</a>
         <a href="https://github.com/priyeshz13" target="_blank" class="social github">GitHub</a>
         <a href="https://www.instagram.com/priyexh.z13?igsh=dG1hZGlzYmU5cWNk" target="_blank" class="social instagram">Instagram</a>
-        <a href="+916265577846" target="_blank" class="social watsapp">watsapp</a>
     </div>
 </section>
 
 </body>
 </html>
+
