--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         with a specialization in Artificial Intelligence and Machine Learning (AI & ML).
         I am currently learning web development and enjoy creating simple and clean websites
         using HTML and CSS. I am passionate about understanding how technology works and
-        constantly try to improve my technical skills.
+        constantly striving to improve my technical skills.
         </p>
     </section>
 
@@ -90,4 +90,5 @@
 
 </body>
 </html>
+
 
